[package]
name = "kwr103"
version = "0.1.0"
authors = ["Christoph Weinsheimer <weinshec@holodeck2.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Remote control Korad KWR103 programmable DC power supplies"
repository = "https://github.com/weinshec/kwr103"
homepage = "https://github.com/weinshec/kwr103"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
serialport = "4.2.2"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
