[package]
name = "kwr103"
version = "0.1.0"
authors = ["Christoph Weinsheimer <weinshec@holodeck2.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Remote control Korad KWR103 programmable DC power supplies"
repository = "https://github.com/weinshec/kwr103"
homepage = "https://github.com/weinshec/kwr103"
keywords = ["power-supply", "serial", "kwr103", "korad"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serialport = "4.3"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
